--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Khaleeq Tanweer",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "colors": "^1.4.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
